edit db connection

--- a/argocd/deployment.yaml
+++ b/argocd/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         run: mybox
     spec:
       containers:
-        - image: 679117170907.dkr.ecr.ap-northeast-2.amazonaws.com/mybox:latest
+        - image: 679117170907.dkr.ecr.ap-northeast-2.amazonaws.com/mybox:0.1
           name: mybox
           ports:
             - containerPort: 80
