--- a/argocd/service.yaml
+++ b/argocd/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mybox
+  name: board
 spec:
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8080
-  type: LoadBalancer
+  type: NodePort
   selector:
-    run: mybox
+    run: board
