--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,11 @@ dependencies {
     compile 'com.h2database:h2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
     compile 'org.springframework.boot:spring-boot-starter-mustache'
+    compile 'org.springframework.boot:spring-boot-starter-oauth2-client'
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
     testCompileOnly 'org.assertj:assertj-core:3.11.1'
+    testCompile 'org.springframework.security:spring-security-test'
     compile 'org.springframework.session:spring-session-jdbc'
     compile 'org.mariadb.jdbc:mariadb-java-client'
 }
