--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,19 @@
 spring:
-
+  redis:
+    host: localhost
+    port: 6379
+  session:
+    store-type: redis
 #  datasource:
-#    url: jdbc:mariadb://acme.appleluck.com:3306/appleluck
-#    username: admin
-#    password: Soldesk!
-#    driver-class-name: org.mariadb.jdbc.Driver
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+  datasource:
+    url: jdbc:mariadb://appleluck-db-dev.cooikna6ekad.ap-northeast-2.rds.amazonaws.com:3306/appleluck
+    username: admin
+    password: Soldesk!
+    driver-class-name: org.mariadb.jdbc.Driver
   h2:
     console:
       enabled: true
@@ -15,10 +24,9 @@ spring:
       hibernate:
         #        show_sql: true
         format_sql: true
-#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   profiles:
     include: oauth
-  session:
-    store-type: jdbc
 logging.level:
   org.hibernate.SQL: debug
+
