--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
     testCompile 'org.springframework.security:spring-security-test'
     compile 'org.springframework.session:spring-session-jdbc'
     compile 'org.mariadb.jdbc:mariadb-java-client'
+    compile 'io.jsonwebtoken:jjwt:0.9.1'
+    compile 'javax.xml.bind:jaxb-api'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.session:spring-session-data-redis'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    compile 'org.springframework.boot:spring-boot-configuration-processor'
 }
 
 test {
