--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,16 +15,16 @@ spring:
 #    password:
 #    driver-class-name: org.h2.Driver
   datasource:
-    url: jdbc:mariadb://appleluck-db-dev.cooikna6ekad.ap-northeast-2.rds.amazonaws.com:3306/appleluck
+    url: jdbc:mariadb://acme.appleluck.com:3306/appleluck
     username: admin
     password: Soldesk!
     driver-class-name: org.mariadb.jdbc.Driver
-  h2:
-    console:
-      enabled: true
+#  h2:
+#    console:
+#      enabled: true
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         #        show_sql: true
